--- a/src/app/app.html
+++ b/src/app/app.html
@@ -328,6 +328,9 @@
       </div>
     </div>
   </div>
+  <div class="p-6 bg-blue-500 text-white rounded-lg">
+    Hello, Tailwind v4!
+  </div>
 </main>
 
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
