design for login page

--- a/src/app/pages/auth/login/login.html
+++ b/src/app/pages/auth/login/login.html
@@ -1,1 +1,32 @@
-<p>login works!</p>
+<div class="flex flex-row w-screen h-screen justify-between">
+  <!-- left panel -->
+  <div class="w-6/12 h-full flex flex-col p-12">
+    <div class="flex flex-row mt-16 mb-8 items-center">
+      <img src="images/logo-coloured.svg" alt="Maestro Logo" class="w-16 mr-2">
+      <span class="font-bold text-4xl h-max" style="color: #002D4B;">Maestro</span>
+    </div>
+    <h1 class="font-bold text-2xl text-gray-700 my-2">Welcome!</h1>
+    <p class="">Access your personalized lessons and materials.</p>
+    <form action="" class="mt-2">
+      <div class="flex flex-col my-6 font-medium">
+        <label for="" class="text-gray-400">Email Address</label>
+        <input type="email" name="" id="" placeholder="Email Address" class="bg-gray-100 p-4 rounded-md">
+      </div>
+      <div class="flex flex-col my-6 font-medium relative">
+        <label for="" class="text-gray-400">Password</label>
+        <input type="password" name="" id="" placeholder="Password" class="bg-gray-100 p-4 rounded-md">
+        <button class="absolute m-4 right-0 bottom-0">
+          <img src="images/eye-icon.svg" alt="" class="w-6">
+        </button>
+      </div>
+      <button type="submit" class="w-full rounded-md p-4 text-white font-bold" style="background-color: #002d4b80;">Next</button>
+    </form>
+    <div class="self-center m-4">
+      New to Maestro? <a href="/signup" style="color: #002D4B;" class="font-medium">Sign Up!</a>
+    </div>
+  </div>
+  <!-- right panel -->
+  <div class="w-6/12 h-full">
+    <img src="images/person-studying-1.png" alt="Maestro Logo" class="h-full w-full">
+  </div>
+</div>
