--- a/src/app/pages/auth/login/login.html
+++ b/src/app/pages/auth/login/login.html
@@ -1,13 +1,14 @@
 <div class="flex flex-row w-screen h-screen justify-between">
   <!-- left panel -->
   <div class="w-6/12 h-full flex flex-col p-12">
-    <div class="flex flex-row mt-16 mb-8 items-center">
+    <div class="flex flex-row my-8 items-center">
       <img src="images/logo-coloured.svg" alt="Maestro Logo" class="w-12 mr-2">
       <span class="font-bold text-3xl h-max text-prussian-blue-500">Maestro</span>
     </div>
     <h1 class="font-bold text-2xl text-gray-700 my-2">Welcome Back!</h1>
     <p class="">Access your personalized lessons and materials.</p>
     <form class="mt-2" #form="ngForm">
+      <!-- Email Input -->
       <div class="flex flex-col my-6 font-medium">
         <label class="text-gray-400">Email Address</label>
         <input
@@ -28,6 +29,8 @@
           </div>
         }
       </div>
+
+      <!-- Password Input -->
       <div class="flex flex-col my-6 font-medium relative">
         <label class="text-gray-400">Password</label>
         <input 
@@ -50,7 +53,15 @@
           <img src="images/eye-icon.svg" alt="" class="w-6">
         </button>
       </div>
-      <button type="submit" class="w-full rounded-md p-4 text-white font-bold bg-prussian-blue-500 hover:bg-prussian-blue-100" (click)="onSubmit()">Next</button>
+
+      <button 
+        type="submit" 
+        class="w-full rounded-md p-4 text-white font-bold bg-prussian-blue-500 hover:bg-prussian-blue-100 disabled:bg-prussian-blue-100" 
+        (click)="onSubmit()" 
+        [disabled]="loading"
+      >
+        Next
+      </button>
     </form>
     <div class="self-center m-4">
       New to Maestro? <a href="/signup" class="font-medium text-prussian-blue-500 hover:text-prussian-blue-100">Sign Up!</a>
