--- a/src/app/pages/auth/signup/signup.html
+++ b/src/app/pages/auth/signup/signup.html
@@ -1,1 +1,123 @@
-<p>signup works!</p>
+<div class="flex flex-row w-screen h-screen justify-between">
+  <!-- left panel -->
+  <div class="w-6/12 h-full flex flex-col p-12">
+    <div class="flex flex-row my-8 items-center">
+      <img src="images/logo-coloured.svg" alt="Maestro Logo" class="w-12 mr-2">
+      <span class="font-bold text-3xl h-max text-prussian-blue-500">Maestro</span>
+    </div>
+    <h1 class="font-bold text-2xl text-gray-700 my-2">Meet Maestro</h1>
+    <p class="">Your AI-powered assistant for mastering complex subjects, simplified.</p>
+    <form class="mt-2" #form="ngForm">
+      <div class="flex flex-row">
+        <!-- First Name Input -->
+        <div class="flex flex-col font-medium relative">
+          <label class="text-gray-400">First Name</label>
+          <input 
+            type="text" 
+            name="firstname" 
+            placeholder="First Name" 
+            class="bg-gray-100 p-4 rounded-md" 
+            [(ngModel)]="firstname"
+            required
+            firstname
+            #firstnameCtrl="ngModel"
+          />
+          <!-- Error messages -->
+          @if (firstnameCtrl.invalid && firstnameCtrl.touched) {
+            <div class="text-red-500 text-sm mt-1">
+              <span>First Name is required</span>
+            </div>
+          }
+        </div>
+        <!-- Last Name Input -->
+        <div class="flex flex-col font-medium relative">
+          <label class="text-gray-400">Last Name</label>
+          <input 
+            type="text" 
+            name="lastname" 
+            placeholder="Last Name" 
+            class="bg-gray-100 p-4 rounded-md" 
+            [(ngModel)]="lastname"
+            required
+            lastname
+            #lastnameCtrl="ngModel"
+          />
+          <!-- Error messages -->
+          @if (lastnameCtrl.invalid && lastnameCtrl.touched) {
+            <div class="text-red-500 text-sm mt-1">
+              <span>Last Name is required</span>
+            </div>
+          }
+        </div>
+      </div>
+
+      <!-- Email Input -->
+      <div class="flex flex-col my-6 font-medium">
+        <label class="text-gray-400">Email Address</label>
+        <input
+          type="email"
+          name="email"
+          placeholder="Email Address"
+          class="bg-gray-100 p-4 rounded-md"
+          [(ngModel)]="email"
+          required
+          email
+          #emailCtrl="ngModel"
+        />
+        <!-- Error messages -->
+        @if (emailCtrl.invalid && emailCtrl.touched) {
+          <div class="text-red-500 text-sm mt-1">
+            @if (emailCtrl.errors?.['required']) {<span>Email is required</span>}
+            @if (emailCtrl.errors?.['email']) {<span>Invalid email format</span>}
+          </div>
+        }
+      </div>
+
+      <!-- Password Input -->
+      <div class="flex flex-col my-6 font-medium relative">
+        <label class="text-gray-400">Password</label>
+        <input 
+          [type]="passwordVisible" 
+          name="password" 
+          placeholder="Password" 
+          class="bg-gray-100 p-4 rounded-md" 
+          [(ngModel)]="password"
+          required
+          password
+          appPasswordValidator
+          #passwordCtrl="ngModel"
+        />
+        <!-- Error messages -->
+        @if (passwordCtrl.invalid && passwordCtrl.touched) {
+          <div class="text-red-500 text-sm mt-1">
+            @if (passwordCtrl.errors?.['required']) {<span>Password is required</span>}
+            @if (passwordCtrl.errors?.['invalidPassword']) {<span>Password must be at least 8 characters and include letters & numbers</span>}
+          </div>
+        }
+        <button class="absolute m-4 right-0 bottom-0" (click)="togglePasswordVisibility()">
+          <img src="images/eye-icon.svg" alt="" class="w-6">
+        </button>
+      </div>
+
+      <button 
+        type="submit" 
+        class="w-full rounded-md p-4 text-white font-bold bg-prussian-blue-500 hover:bg-prussian-blue-100 disabled:bg-prussian-blue-100" 
+        (click)="onSubmit()"
+        [disabled]="loading"
+      >
+        Next
+      </button>
+    </form>
+    <div class="self-center m-4">
+      Have a Maestro account? <a href="/login" class="font-medium text-prussian-blue-500 hover:text-prussian-blue-100">Log In</a>
+    </div>
+  </div>
+  <!-- right panel -->
+  <div class="w-6/12 h-full relative">
+    <img src="images/person-studying-1.png" alt="Maestro Logo" class="h-full w-full object-cover">
+    <div class="flex flex-row m-8 items-center absolute left-0 bottom-0">
+      <img src="images/logo-white.svg" alt="Maestro Logo" class="w-12 mr-2">
+      <span class="font-bold text-3xl h-max text-white">Maestro</span>
+    </div>
+  </div>
+</div>
