--- a/src/app/pages/auth/login/login.html
+++ b/src/app/pages/auth/login/login.html
@@ -3,7 +3,7 @@
   <div class="w-6/12 h-full flex flex-col p-12">
     <div class="flex flex-row my-8 items-center">
       <img src="images/logo-coloured.svg" alt="Maestro Logo" class="w-12 mr-2">
-      <span class="font-bold text-3xl h-max text-prussian-blue-500">Maestro</span>
+      <span class="font-serif text-3xl h-max text-prussian-blue-500">Maestro</span>
     </div>
     <h1 class="font-bold text-2xl text-gray-700 my-2">Welcome Back!</h1>
     <p class="">Access your personalized lessons and materials.</p>
@@ -72,7 +72,7 @@
     <img src="images/person-studying-1.png" alt="Maestro Logo" class="h-full w-full object-cover">
     <div class="flex flex-row m-8 items-center absolute left-0 bottom-0">
       <img src="images/logo-white.svg" alt="Maestro Logo" class="w-12 mr-2">
-      <span class="font-bold text-3xl h-max text-white">Maestro</span>
+      <span class="font-serif text-3xl h-max text-white">Maestro</span>
     </div>
   </div>
 </div>
