--- a/src/app/pages/dashboard/subjects/subjects.html
+++ b/src/app/pages/dashboard/subjects/subjects.html
@@ -1,16 +1,56 @@
 <app-header></app-header>
 @if (subjects.length == 0) {
-  <div class="flex flex-col w-full h-full items-center justify-center">
+  <div class="flex flex-col w-full h-full items-center justify-center absolute">
     <h1 class="m-2 text-3xl font-medium">Start Your Learning Journey</h1>
     <p class="w-6/12 text-center">Create subjects to keep your study materials neatly categorized and easy to find.</p>
     <button 
       routerLink="/subject-create/naming-upload"
-      class="w-max rounded-md m-8 px-5 py-3 text-white bg-prussian-blue-400 hover:bg-prussian-blue-100 disabled:bg-prussian-blue-100 flex flex-row" 
+      class="w-max rounded-md m-8 px-5 py-3 text-white bg-prussian-blue-800 hover:bg-prussian-blue-500 disabled:bg-prussian-blue-500 flex flex-row" 
     >
       Create New Subject
       <img src="images/create-subject-icon.svg" alt="" class="w-4 ml-2">
     </button>
   </div>
 } @else {
-  <p>jdsndknskdnaksndnaskdnasdn</p>
+  <div class="flex flex-col w-full px-32">
+    <!-- Heading -->
+    <div class="flex flex-row w-full justify-between my-4">
+      <div class="flex flex-row items-center">
+        <img src="images/subject-icon.svg" alt="" class="w-4 mx-4">
+        <span>My Subjects</span>
+      </div>
+      <button 
+        routerLink="/subject-create/naming-upload"
+        class="w-max rounded-md px-5 py-3 text-white bg-prussian-blue-800 hover:bg-prussian-blue-500 disabled:bg-prussian-blue-500 flex flex-row text-xs" 
+      >
+        Create New Subject
+        <img src="images/create-subject-icon.svg" alt="" class="w-4 ml-2">
+      </button>
+    </div>
+
+    <!-- Subjects List -->
+    <div class="w-full h-full flex flex-row flex-wrap items-center justify-center">
+      @for (subject of subjects; track subject.id) {
+        <!-- Subjects Item -->
+        <button 
+          class="flex flex-col w-56 h-28 p-4 bg-prussian-blue-150 hover:bg-prussian-blue-200 rounded-md justify-between m-4 relative hover:top-2"
+          routerLink="/lesson/{{subject.id}}"
+        >
+          <div class="flex flex-row justify-between items-center">
+            <span>{{subject.name}}</span>
+            <span class="text-xs">{{subject.status}}</span>
+          </div>
+          <div class="flex flex-row w-full items-center">
+            <!-- Progress Bar -->
+            <div class="w-full">
+              <div class="w-3/4 h-2 bg-gray-300 rounded-full">
+                <div class="h-full bg-prussian-blue-800 rounded-full" [ngStyle]="{ width: subject.completion + '%' }"></div>
+              </div>
+            </div>
+            <span>{{subject.completion}}%</span>
+          </div>
+        </button>
+      }
+    </div>
+  </div>
 }
