--- a/src/app/pages/auth/login/login.html
+++ b/src/app/pages/auth/login/login.html
@@ -49,8 +49,8 @@
             <span>Password is required</span>
           </div>
         }
-        <button class="absolute m-4 right-0 bottom-0" (click)="togglePasswordVisibility()">
-          <img src="images/eye-icon.svg" alt="" class="w-6">
+        <button type="button" (click)="togglePasswordVisibility()"class="absolute p-4 right-0 top-6 bottom-6" >
+          <img src="images/eye-icon.svg" alt="Toggle Visibility" class="w-6">
         </button>
       </div>
 
