--- a/src/app/pages/auth/signup/signup.html
+++ b/src/app/pages/auth/signup/signup.html
@@ -3,7 +3,7 @@
   <div class="w-6/12 h-full flex flex-col p-12">
     <div class="flex flex-row my-8 items-center">
       <img src="images/logo-coloured.svg" alt="Maestro Logo" class="w-12 mr-2">
-      <span class="font-serif text-3xl h-max text-prussian-blue-900">Maestro</span>
+      <span class="font-serif text-3xl h-max text-prussian-blue-500">Maestro</span>
     </div>
     <h1 class="font-bold text-2xl text-gray-700 my-2">Meet Maestro</h1>
     <p class="">Your AI-powered assistant for mastering complex subjects, simplified.</p>
@@ -94,14 +94,14 @@
             @if (passwordCtrl.errors?.['invalidPassword']) {<span>Password must be at least 8 characters and include letters & numbers</span>}
           </div>
         }
-        <button class="absolute m-4 right-0 bottom-0" (click)="togglePasswordVisibility()">
+        <button type="button" (click)="togglePasswordVisibility()" class="absolute p-4 right-0 top-6 bottom-6">
           <img src="images/eye-icon.svg" alt="" class="w-6">
         </button>
       </div>
 
       <button 
         type="submit" 
-        class="w-full rounded-md p-4 text-white font-bold bg-prussian-blue-900 hover:bg-prussian-blue-500 disabled:bg-prussian-blue-500" 
+        class="w-full rounded-md p-4 text-white font-bold bg-prussian-blue-500 hover:bg-prussian-blue-100 disabled:bg-prussian-blue-100" 
         (click)="onSubmit()"
         [disabled]="loading"
       >
@@ -109,7 +109,7 @@
       </button>
     </form>
     <div class="self-center m-4">
-      Have a Maestro account? <a href="/login" class="font-medium text-prussian-blue-900 hover:text-prussian-blue-500">Log In</a>
+      Have a Maestro account? <a href="/login" class="font-medium text-prussian-blue-500 hover:text-prussian-blue-100">Log In</a>
     </div>
   </div>
   <!-- right panel -->
