--- a/src/app/pages/auth/signup/signup.html
+++ b/src/app/pages/auth/signup/signup.html
@@ -94,8 +94,8 @@
             @if (passwordCtrl.errors?.['invalidPassword']) {<span>Password must be at least 8 characters and include letters & numbers</span>}
           </div>
         }
-        <button class="absolute m-4 right-0 bottom-0" (click)="togglePasswordVisibility()">
-          <img src="images/eye-icon.svg" alt="" class="w-6">
+        <button type="button" (click)="togglePasswordVisibility()"class="absolute p-4 right-0 top-6 bottom-6" >
+          <img src="images/eye-icon.svg" alt="Toggle Visibility" class="w-6">
         </button>
       </div>
 
