--- a/src/app/pages/subject-create/naming-upload/naming-upload.html
+++ b/src/app/pages/subject-create/naming-upload/naming-upload.html
@@ -20,4 +20,79 @@
       class="w-2/6"
     />
   </div>
+  <h1 class="text-2xl my-4 font-medium">Create a new subject</h1>
+  <form #form="ngForm" class="flex flex-col w-6/12">
+    <label for="">Subject Name</label>
+    <input 
+      type="text" 
+      name="subjectName" 
+      placeholder="Name of the subject" 
+      class="bg-gray-100 p-4 my-1 rounded-lg border border-prussian-blue-250 text-sm" 
+      [(ngModel)]="subjectName"
+      required
+      subjectName
+      #nameCtrl="ngModel"
+    />
+    <!-- Error messages -->
+    @if (nameCtrl.invalid && nameCtrl.touched) {
+      <div class="text-red-500 text-sm mt-1">
+        @if (nameCtrl.errors?.['required']) {<span>Subject Name cannot be empty</span>}
+      </div>
+    }
+
+    <!-- Drag and drop area here -->
+    <div
+      class="my-4 flex flex-col items-center justify-center w-full border-2 border-dashed border-gray-400 rounded-2xl px-6 py-10 cursor-pointer transition hover:border-prussian-blue-250 bg-gray-50"
+      (drop)="onFileDrop($event)"
+      (dragover)="onDragOver($event)"
+      (dragleave)="onDragLeave($event)"
+      [class.bg-blue-50]="isDragging"
+    >
+      <label
+        for="fileInput"
+        class="border border-gray-200 hover:border-gray-300 p-2 rounded-md cursor-pointer "
+      >
+        <img src="images/upload-file-icon.svg" alt="" class="w-4">
+      </label>
+      <input
+        type="file"
+        id="fileInput"
+        (change)="onFileSelect($event)"
+        class="hidden"
+        multiple
+      />
+      <p class="text-gray-600 text-sm text-center">Upload your PDFs and DOCX files here to start generating personalized lessons for this subject.</p>
+      <p class="text-gray-400 text-xs my-2 text-center">JPG, PNG, PDF. Max file size: 25MB.</p>
+    </div>
+
+    <!-- Show selected files -->
+    @if (files.length > 0) {
+      <div class="mb-4 space-y-1">
+        <p class="text-sm font-medium text-gray-700">Selected files:</p>
+        <ul class="list-disc list-inside text-sm text-gray-600">
+          @for (file of files; track $index) {
+            <li>
+              {{ file.name }}
+              <span class="text-gray-400 text-xs">({{ file.size/1000 }} KB)</span>
+              <button
+                class="ml-2 text-red-500 hover:text-red-700"
+                (click)="removeFile(file)"
+              >
+                X
+              </button>
+            </li>
+          }
+        </ul>
+      </div>
+    }
+
+    <button 
+      type="submit" 
+      class="w-max bg-prussian-blue-800 hover:bg-prussian-blue-500 text-white flex flex-row items-center px-5 py-3 rounded-md text-sm" 
+      (click)="onSubmit()"
+    >
+      Create New Subject
+      <img src="images/create-subject-icon.svg" alt="" class="w-4 ml-3">
+    </button>
+  </form>
 </div>
