--- a/src/app/pages/subject-create/naming-upload/naming-upload.html
+++ b/src/app/pages/subject-create/naming-upload/naming-upload.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
 <div class="flex flex-col w-full px-32">
-  <div class="flex flex-row">
+  <div class="flex flex-row mb-8">
     <app-creation-step-tab
       [text]="'My Subject and Materials'"
       [icon]="'images/subject-icon.svg'"
@@ -20,8 +20,8 @@
       class="w-2/6"
     />
   </div>
-  <h1 class="text-2xl my-4 font-medium">Create a new subject</h1>
-  <form #form="ngForm" class="flex flex-col w-6/12">
+  <h1 class="text-2xl font-medium">Create a new subject</h1>
+  <form #form="ngForm" class="flex flex-col w-6/12 my-4">
     <label for="">Subject Name</label>
     <input 
       type="text" 
@@ -78,6 +78,7 @@
                 class="ml-2 text-red-500 hover:text-red-700"
                 (click)="removeFile(file)"
               >
+                <!-- Replace with X icon -->
                 X
               </button>
             </li>
@@ -88,8 +89,9 @@
 
     <button 
       type="submit" 
-      class="w-max bg-prussian-blue-800 hover:bg-prussian-blue-500 text-white flex flex-row items-center px-5 py-3 rounded-md text-sm" 
+      class="w-max bg-prussian-blue-800 hover:bg-prussian-blue-500 disabled:bg-prussian-blue-500 text-white flex flex-row items-center px-5 py-3 rounded-md text-sm" 
       (click)="onSubmit()"
+      [disabled]="loading"
     >
       Create New Subject
       <img src="images/create-subject-icon.svg" alt="" class="w-4 ml-3">
