started lesson page and added navigation sidebar

--- a/src/app/pages/auth/signup/signup.html
+++ b/src/app/pages/auth/signup/signup.html
@@ -8,9 +8,9 @@
     <h1 class="font-bold text-2xl text-gray-700 my-2">Meet Maestro</h1>
     <p class="">Your AI-powered assistant for mastering complex subjects, simplified.</p>
     <form class="mt-2" #form="ngForm">
-      <div class="flex flex-row">
+      <div class="flex flex-row justify-between">
         <!-- First Name Input -->
-        <div class="flex flex-col font-medium relative">
+        <div class="flex flex-col font-medium relative w-2/4 mr-2">
           <label class="text-gray-400">First Name</label>
           <input 
             type="text" 
@@ -30,7 +30,7 @@
           }
         </div>
         <!-- Last Name Input -->
-        <div class="flex flex-col font-medium relative">
+        <div class="flex flex-col font-medium relative w-2/4 ml-2">
           <label class="text-gray-400">Last Name</label>
           <input 
             type="text" 
