--- a/src/app/pages/lesson/lesson-page/lesson-page.html
+++ b/src/app/pages/lesson/lesson-page/lesson-page.html
@@ -1,10 +1,16 @@
 <app-header/>
-<div class="w-full flex flex-row justify-between">
+<div class="w-full flex flex-row">
   <app-sidebar [content]="subjectContent" [currentView]="currentView" (updateView)="updateCurrentView($event)" class="w-1/5"></app-sidebar>
-  <div>
-    <app-subtopic></app-subtopic>
-    <app-exercise></app-exercise>
-    <app-exam></app-exam>
+  <div class="flex w-4/5">
+    @if (currentView.type === 'subtopic') {
+      <app-subtopic [currentTopic]="getTopicData()" [currentView]="currentView" (cycleSubtopic)="changeSubtopic($event)" class="w-full mr-6 ml-12"></app-subtopic>
+    }
+    @if (currentView.type === 'exercise') {
+      <app-exercise></app-exercise>
+    }
+    @if (currentView.type === 'exam') {
+      <app-exam></app-exam>
+    }
   </div>
-  <app-chatbot></app-chatbot>
+  <app-chatbot class="hidden w-1/5"></app-chatbot>
 </div>
