--- a/src/app/pages/lesson/sidebar/sidebar.html
+++ b/src/app/pages/lesson/sidebar/sidebar.html
@@ -4,21 +4,21 @@
     <button class="rounded-full p-3 bg-prussian-blue-800 hover:bg-prussian-blue-500" routerLink="/dashboard">
       <img src="images/subject-icon-white.svg" alt="" class="w-5">
     </button>
-    <span class="text-prussian-blue-900 hover:text-prussian-blue-500 mx-4 cursor-pointer" routerLink="/dashboard">Back to Subjects</span>
+    <span class="text-prussian-blue-900 hover:text-prussian-blue-500 mx-4 cursor-pointer font-medium" routerLink="/dashboard">Back to Subjects</span>
   </div>
 
   <!-- Main Navigation -->
   <div class="p-2">
     <!-- Topic List -->
     @for (topic of content().topics; track topic.topic_id) {
-      <button class="flex flex-row items-center hover:text-gray-600" (click)="toggleExpandTopic(topic.topic_id)">
+      <button class="flex flex-row items-center hover:text-gray-600 text-left" (click)="toggleExpandTopic(topic.topic_id)">
         <img src="images/dropdown-icon-closed.svg" alt="" [class]="`w-2 m-4 ${topic.expanded ? 'rotate-90' : ''}`">
         {{ topic.topic_name }}
       </button>
       @if (topic.expanded) {
         <!-- Subtopic List -->
         @for (subtopic of topic.subtopics; track subtopic.subtopic_id) {
-          <button [class]="`py-2 pl-10 text-gray-600 w-full text-left hover:bg-prussian-blue-200 border-prussian-blue-900 ${
+          <button [class]="`py-2 px-2 pl-8 text-gray-600 w-full text-left hover:bg-prussian-blue-200 border-prussian-blue-900 ${
             (subtopic.subtopic_id === currentView().id && currentView().type === 'subtopic') ? 'border-l-4' : ''
             }`"
             (click)="selectView(subtopic.subtopic_id, 'subtopic')"
@@ -28,7 +28,7 @@
         }
         <!-- Exercise -->
         @if (topic.exercise) {
-          <button [class]="`py-2 pl-10 text-gray-600 w-full text-left hover:bg-prussian-blue-200 border-prussian-blue-900 ${
+          <button [class]="`py-2 px-2 pl-8 text-gray-600 w-full text-left hover:bg-prussian-blue-200 border-prussian-blue-900 ${
               (topic.exercise.exercise_id === currentView().id && currentView().type === 'exercise') ? 'border-l-4' : ''
               }`"
             (click)="selectView(topic.exercise.exercise_id, 'exercise')">
@@ -39,7 +39,7 @@
     }
     <!-- Exam -->
     @if (content().exam) {
-      <button [class]="`py-2 pl-10 text-gray-600 w-full text-left hover:bg-prussian-blue-200 border-prussian-blue-900 ${
+      <button [class]="`py-2 px-2 pl-8 text-gray-600 w-full text-left hover:bg-prussian-blue-200 border-prussian-blue-900 ${
           (content().exam.exam_id === currentView().id && currentView().type === 'exam') ? 'border-l-4' : ''
           }`"
         (click)="selectView(content().exam.exam_id, 'exam')">
