added practice question page, still lacking tho

--- a/src/app/pages/lesson/subtopic/subtopic.html
+++ b/src/app/pages/lesson/subtopic/subtopic.html
@@ -20,6 +20,7 @@
     </div>
   </div>
 
+  <!-- Subtopic Name -->
   <h1 class="flex flex-row items-center my-6">
     <div class="rounded-full bg-prussian-blue-200 p-3">
       <img src="images/subject-icon.svg" alt="" class="w-6">
@@ -27,6 +28,7 @@
     <span class="text-3xl font-medium mx-4">{{ currentView().content.subtopic_name }}</span>
   </h1>
 
+  <!-- Subtopic Content -->
   <div class="text-lg text-gray-700">
     {{ currentView().content.content }}
   </div>
