--- a/src/app/pages/lesson/chatbot/chatbot.html
+++ b/src/app/pages/lesson/chatbot/chatbot.html
@@ -1,1 +1,27 @@
-<p>chatbot works!</p>
+<div class="flex flex-col justify-end h-full w-full bg-white border-l-2 p-2">
+  <button class="absolute top-2 justify-self-start p-3 rounded-full bg-prussian-blue-800 hover:bg-prussian-blue-500" (click)="onCloseChat()">
+    <img src="images/x-icon.svg" alt="">
+  </button>
+  <div class="flex flex-col w-full flex-grow overflow-y-auto scrollbar-thin scrollbar-thumb-gray-400 hover:scrollbar-thumb-gray-500">
+    @for (chat of chatHistory(); track $index) {
+      <div 
+        [class]="`rounded-xl p-2 my-1 break-words ${(chat.sender === 'user') ? 'self-end bg-prussian-blue-800 text-white' : 'self-start bg-prussian-blue-200 text-prussian-blue-900'}`"
+        style="max-width: 80%;"
+      >
+        {{chat.message}}
+      </div>
+    }
+  </div>
+  <div class="w-full flex flex-col place-self-end">
+    <textarea 
+      class="p-2 my-2 border-2 rounded-md overflow-hidden w-full"
+      rows="1"
+      [(ngModel)]="currentMessage"
+      oninput="this.style.height = 'auto'; this.style.height = this.scrollHeight + 'px';"
+      onmousemove="this.style.height = 'auto'; this.style.height = this.scrollHeight + 'px';"
+    ></textarea>
+    <button class="self-center w-2/4 text-white rounded-md p-2 bg-prussian-blue-800 hover:bg-prussian-blue-500" (click)="sendMessage()">
+      Send
+    </button>
+  </div>
+</div>
