--- a/src/app/pages/lesson/practice/practice.html
+++ b/src/app/pages/lesson/practice/practice.html
@@ -1,37 +1,53 @@
 <div class="p-4 w-full flex flex-col">
-  @for (question of currentView().content.questions; track $index) {
-    <div class="w-full p-4">
-      <h2 class="mb-2 text-gray-800">
-        {{$index + 1}}. {{question.question_text}}
-      </h2>
-      @if (question.question_type === 'essay') {
-        <textarea
-          class="w-full p-2 text-gray-600 border-b-2 border-gray-300 resize-none overflow-hidden focus:outline-none focus:border-b-2 focus:border-prussian-blue-800"
-          rows="1"
-          placeholder="Type your answer here..."
-          [(ngModel)]="question.answer"
-          (input)="autoResize($event)"
-          [disabled]="currentView().content.score"
-        ></textarea>
-      } @else {
-        @for (option of question.options; track option.option_id) {
-          <div>
-            <input 
-              [type]="`${question.question_type === 'multiple choice' ? 'radio' : 'checkbox'}`" 
-              [name]="question.question_id" 
-              [id]="option.option_id" 
-              class="m-2 accent-blue-900 cursor-pointer" 
-              [value]="option.option_id"
-              [checked]="option.selected"
-              (change)="toggleSelectOption(question, option.option_id)"
-              [disabled]="currentView().content.score"
-            >
-            <label [for]="option.option_id" class="text-gray-600 cursor-pointer">{{option.option_text}}</label>
-          </div>
-        }
+  <h1 class="mx-4 mt-4 text-2xl font-medium">
+    Question {{getQuestionNumber()}}
+  </h1>
+  <div class="w-full p-4">
+    <h2 class="mb-2 text-gray-800">
+      {{question.question_text}}
+    </h2>
+    @if (question.question_type === 'essay') {
+      <textarea
+        class="w-full p-2 text-gray-600 border-b-2 border-gray-300 resize-none overflow-hidden focus:outline-none focus:border-b-2 focus:border-prussian-blue-800"
+        rows="1"
+        placeholder="Type your answer here..."
+        [(ngModel)]="question.answer"
+        oninput="this.style.height = 'auto'; this.style.height = this.scrollHeight + 'px';"
+        onmousemove="this.style.height = 'auto'; this.style.height = this.scrollHeight + 'px';"
+        [disabled]="currentView().content.score"
+      ></textarea>
+    } @else {
+      @for (option of question.options; track option.option_id) {
+        <div>
+          <input 
+            [type]="`${question.question_type === 'multiple choice' ? 'radio' : 'checkbox'}`" 
+            [name]="question.question_id" 
+            [id]="option.option_id" 
+            class="m-2 accent-blue-900 cursor-pointer" 
+            [value]="option.option_id"
+            [checked]="option.selected"
+            (change)="toggleSelectOption(option.option_id)"
+            [disabled]="currentView().content.score"
+          >
+          <label [for]="option.option_id" class="text-gray-600 cursor-pointer">{{option.option_text}}</label>
+        </div>
       }
-    </div>
-  }
+    }
+  </div>
+  
+  <!-- Question Navigation -->
+  <div class="flex flex-row">
+    <button class="flex flex-row items-center mx-4 text-prussian-blue-900 hover:text-prussian-blue-500" (click)="cycleQuestion('prev')">
+      <img src="images/dropdown-icon-closed.svg" alt="" class="w-2 m-4 rotate-180">
+      Previous
+    </button>
+    <button class="flex flex-row items-center mx-4 text-prussian-blue-900 hover:text-prussian-blue-500" (click)="cycleQuestion('next')">
+      Next
+      <img src="images/dropdown-icon-closed.svg" alt="" class="w-2 m-4">
+    </button>
+  </div>
+
+  <!-- Submission Button -->
   <button class="self-start w-max text-sm text-white bg-prussian-blue-800 m-4 px-12 py-3 rounded-lg hover:bg-prussian-blue-500 transition duration-100" (click)="submitAnswers()">
     Submit
   </button>
