--- a/src/app/pages/lesson/chatbot/chatbot.html
+++ b/src/app/pages/lesson/chatbot/chatbot.html
@@ -1,7 +1,10 @@
 <div class="flex flex-col justify-end h-full w-full bg-white border-l-2 p-2">
+  <!-- Close Button -->
   <button class="absolute top-2 justify-self-start p-3 rounded-full bg-prussian-blue-800 hover:bg-prussian-blue-500" (click)="onCloseChat()">
     <img src="images/x-icon.svg" alt="">
   </button>
+
+  <!-- Chat Messages -->
   <div class="flex flex-col w-full flex-grow overflow-y-auto scrollbar-thin scrollbar-thumb-gray-400 hover:scrollbar-thumb-gray-500">
     @for (chat of chatHistory(); track $index) {
       <div 
@@ -12,6 +15,8 @@
       </div>
     }
   </div>
+
+  <!-- Text Input -->
   <div class="w-full flex flex-col place-self-end">
     <textarea 
       class="p-2 my-2 border-2 rounded-md overflow-hidden w-full"
@@ -20,7 +25,13 @@
       oninput="this.style.height = 'auto'; this.style.height = this.scrollHeight + 'px';"
       onmousemove="this.style.height = 'auto'; this.style.height = this.scrollHeight + 'px';"
     ></textarea>
-    <button class="self-center w-2/4 text-white rounded-md p-2 bg-prussian-blue-800 hover:bg-prussian-blue-500" (click)="sendMessage()">
+
+    <!-- Submit Button -->
+    <button 
+      class="self-center w-2/4 text-white rounded-md p-2 bg-prussian-blue-800 hover:bg-prussian-blue-500" 
+      (click)="sendMessage()"
+      [disabled]="loading || !currentMessage"
+    >
       Send
     </button>
   </div>
