--- a/src/app/pages/lesson/lesson-page/lesson-page.html
+++ b/src/app/pages/lesson/lesson-page/lesson-page.html
@@ -52,7 +52,7 @@
   </div>
 
   <app-chatbot 
-    [class]="`w-3/12 absolute right-0 top-0 h-screen ${chatOpen ? '' : 'hidden'}`" 
+    [class]="`w-3/12 absolute right-0 top-0 h-screen ${(chatOpen && !(currentView.type !== 'subtopic' && !currentView.content.score)) ? '' : 'hidden'}`" 
     [chatHistory]="chatHistory" 
     [metadata]="chatMetadata"
     (closeChat)="toggleChatPopup()"
@@ -62,6 +62,7 @@
 <button 
   [class]="`absolute right-24 bottom-16 rounded-full p-6 bg-prussian-blue-200 hover:bg-prussian-blue-250 ${chatOpen ? 'hidden' : ''}`" 
   (click)="toggleChatPopup()"
+  [disabled]="(currentView.type !== 'subtopic' && !currentView.content.score)"
 >
   <img src="images/chat-popup-icon.svg" alt="Chat" class="w-10">
 </button>
