--- a/src/app/pages/lesson/sidebar/sidebar.html
+++ b/src/app/pages/lesson/sidebar/sidebar.html
@@ -10,28 +10,28 @@
   <!-- Main Navigation -->
   <div class="p-2">
     <!-- Topic List -->
-    @for (topic of content().topics; track topic.topic_id) {
-      <button [class]="`flex flex-row items-center hover:text-gray-600 text-left ${!topic.completed ? 'font-bold' : ''}`" (click)="toggleExpandTopic(topic.topic_id)">
+    @for (topic of content().topics; track topic.id) {
+      <button [class]="`flex flex-row items-center hover:text-gray-600 text-left ${!topic.completed ? 'font-bold' : ''}`" (click)="toggleExpandTopic(topic.id)">
         <img src="images/dropdown-icon-closed.svg" alt="" [class]="`w-2 m-4 ${topic.expanded ? 'rotate-90' : ''}`">
-        {{ topic.topic_name }}
+        {{ topic.title }}
       </button>
       @if (topic.expanded) {
         <!-- Subtopic List -->
-        @for (subtopic of topic.subtopics; track subtopic.subtopic_id) {
+        @for (subtopic of topic.subtopics; track subtopic.id) {
           <button [class]="`py-2 px-2 pl-8 text-gray-600 w-full text-left hover:bg-prussian-blue-200 border-prussian-blue-900 
-            ${(subtopic.subtopic_id === currentView().id && currentView().type === 'subtopic') ? 'border-l-4' : ''}
+            ${(subtopic.id === currentView().id && currentView().type === 'subtopic') ? 'border-l-4' : ''}
             ${!subtopic.read ? 'font-bold' : ''}`"
-            (click)="selectView(subtopic.subtopic_id, 'subtopic')"
+            (click)="selectView(subtopic.id, 'subtopic')"
           >
-            {{ subtopic.subtopic_name }}
+            {{ subtopic.title }}
           </button>
         }
         <!-- Exercise -->
         @if (topic.exercise) {
           <button [class]="`py-2 px-2 pl-8 text-gray-600 w-full text-left hover:bg-prussian-blue-200 border-prussian-blue-900 
-            ${(topic.exercise.exercise_id === currentView().id && currentView().type === 'exercise') ? 'border-l-4' : ''}
+            ${(topic.exercise.id === currentView().id && currentView().type === 'exercise') ? 'border-l-4' : ''}
             ${!topic.exercise.score ? 'font-bold' : ''}`"
-            (click)="selectView(topic.exercise.exercise_id, 'exercise')">
+            (click)="selectView(topic.exercise.id, 'exercise')">
             Exercise
           </button>
         }
