--- a/src/app/pages/subject-create/naming-upload/naming-upload.html
+++ b/src/app/pages/subject-create/naming-upload/naming-upload.html
@@ -77,6 +77,7 @@
               <button
                 class="ml-2 text-red-500 hover:text-red-700"
                 (click)="removeFile(file)"
+                [disabled]="loading"
               >
                 <!-- Replace with X icon -->
                 X
