--- a/src/app/pages/subject-create/topic-preferences/topic-preferences.html
+++ b/src/app/pages/subject-create/topic-preferences/topic-preferences.html
@@ -33,12 +33,13 @@
       <button
         [class]="'flex flex-row rounded-full py-4 px-6 text-sm text-white mx-2 my-1 transition duration-300 ease-in-out ' + ( topic.selected? 'bg-prussian-blue-900' : 'bg-gray-500')"
         (click)="toggleTopicSelection(topic.id)"
+        [disabled]="loading"
       >
         @if (topic.selected) {
           <!-- Replace with X icon -->
           <img src="images/x-icon.svg" alt="X" class="mr-2 w-3">
         }
-        {{topic.name}}
+        {{topic.title}}
       </button>
     }
   </div>
@@ -56,6 +57,7 @@
       required
       learningStyle
       #learningStyleCtrl="ngModel"
+      [disabled]="loading"
     ></textarea>
     <!-- Error messages -->
     @if (learningStyleCtrl.invalid && learningStyleCtrl.touched) {
