--- a/src/app/pages/lesson/lesson-page/lesson-page.html
+++ b/src/app/pages/lesson/lesson-page/lesson-page.html
@@ -46,7 +46,10 @@
       <app-practice 
         class="w-full mr-6 ml-12"
         [currentView]="currentView" 
+        [subjectId]="subjectId"
+        [topicId]="(currentView.type == 'exercise') ? getTopicDataFromExercise().id : null"
         (changeQuestion)="updateChatMetadata($event)" 
+        (exerciseCompleted)="checkForTopicCompleteness($event)"
       ></app-practice>
     }
   </div>
@@ -60,7 +63,8 @@
 </div>
 
 <button 
-  [class]="`absolute right-24 bottom-16 rounded-full p-6 bg-prussian-blue-200 hover:bg-prussian-blue-250 ${chatOpen ? 'hidden' : ''}`" 
+  [class]="`absolute right-24 bottom-16 rounded-full p-6 bg-prussian-blue-200 hover:bg-prussian-blue-250 
+  ${(chatOpen || (currentView.type !== 'subtopic' && !currentView.content.score)) ? 'hidden' : ''}`" 
   (click)="toggleChatPopup()"
   [disabled]="(currentView.type !== 'subtopic' && !currentView.content.score)"
 >
